# maa-perf-cases

./: .gitignore  CMakeLists.txt  README.md  bench_matcher.cpp
RegressionCases/baseline/: README.md
RegressionCases/baseline/android/: coverage.txt  depot.txt  perf.txt
RegressionCases/baseline/windows/: coverage.txt  depot.txt  perf.txt
RegressionCases/coverage/1/: 0_matched.f32  params.json
RegressionCases/coverage/10/: params.json
RegressionCases/coverage/100/: params.json
RegressionCases/coverage/101/: params.json
RegressionCases/coverage/102/: 0_matched.f32  params.json
RegressionCases/coverage/103/: 0_matched.f32  params.json
RegressionCases/coverage/104/: 0_matched.f32  params.json
RegressionCases/coverage/105/: 0_matched.f32  params.json
RegressionCases/coverage/106/: 0_matched.f32  params.json
RegressionCases/coverage/10648/: params.json
RegressionCases/coverage/10649/: 0_matched.f32
RegressionCases/coverage/10650/: 0_matched.f32
RegressionCases/coverage/10651/: 0_matched.f32
RegressionCases/coverage/10652/: 0_matched.f32  params.json
RegressionCases/coverage/10653/: 0_matched.f32  params.json
RegressionCases/coverage/10654/: 0_matched.f32  params.json
RegressionCases/coverage/10667/: 0_matched.f32  params.json
RegressionCases/coverage/10668/: 0_matched.f32  (+1 more)
data/android/: coverage.txt  perf.txt
data/windows/: coverage_run1.txt  coverage_run2.txt  perf_run1.txt  perf_run2.txt
docs/: perf-report.md
patches/: 0001-enable-benchmark-subdir.patch
scripts/: analyze_bench.py  analyze_origin_cases.py  plot_perf.py
(+4165 files in other folders)
